@@ -1,4 +1,4 @@
-# Copyright 2003-2013 Free Software Foundation, Inc.
+# Copyright 2003, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,6 +18,10 @@
 # This is intended to be a repository for tests that partial symbols
 # are working properly.  If multiple tests are added, make sure that
 # you exit and restart GDB between tests.
+
+if $tracelevel then {
+    strace $tracelevel
+}
 
 #
 # test running programs
@@ -46,7 +50,7 @@ if  { [gdb_compile "${testfile}1.o ${testfile}2.o" ${binfile} executable {debug}
 
 # Create and source the file that provides information about the compiler
 # used to compile the test case.
-if [get_compiler_info] {
+if [get_compiler_info ${binfile}] {
     return -1;
 }
 
