@@ -1,4 +1,5 @@
-# Copyright 1992-2013 Free Software Foundation, Inc.
+# Copyright 1992, 1997, 1999, 2001, 2002, 2003, 2004, 2007, 2008, 2009, 2010,
+# 2011 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -16,16 +17,23 @@
 # This file was written by Fred Fish. (fnf@cygnus.com)
 # Adapted for g++ 3.0 ABI by Michael Chastain. (chastain@redhat.com)
 
+if $tracelevel then {
+	strace $tracelevel
+}
+
 if { [skip_cplus_tests] } { continue }
 
-standard_testfile .cc
+set testfile "cplusfuncs"
+set srcfile ${testfile}.cc
+set binfile ${objdir}/${subdir}/${testfile}
 
-if { [get_compiler_info "c++"] } {
+if { [get_compiler_info $binfile "c++"] } {
     return -1
 }
 
-if {[prepare_for_testing $testfile.exp $testfile $srcfile {debug c++}]} {
-    return -1
+if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug c++}] != "" } {
+     untested cplusfuncs.exp
+     return -1
 }
 
 #
@@ -580,16 +588,26 @@ proc test_paddr_hairy_functions {} {
 }
 
 proc do_tests {} {
+    global subdir
+    global objdir
+    global srcdir
     global binfile
+    global gdb_prompt
     global dm_type_int_star
 
-    clean_restart $binfile
 
+    # Start with a fresh gdb.
+
+    gdb_exit
+    gdb_start
+    gdb_reinitialize_dir $srcdir/$subdir
+    gdb_load $binfile
+
+    gdb_test_no_output "set language c++"
     gdb_test_no_output "set width 0"
 
     runto_main
 
-    gdb_test_no_output "set language c++"
     probe_demangler
     test_paddr_overloaded_functions
     test_paddr_operator_functions
