@@ -1,4 +1,4 @@
-# Copyright (C) 2011-2013 Free Software Foundation, Inc.
+# Copyright (C) 2011 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,14 +17,16 @@
 # only a declaration there for the method.  The method is then defined in
 # a different file providing only ELF symbols.
 
-standard_testfile .cc minsym-fallback-main.cc
+set testfile minsym-fallback
+set srcfile ${testfile}.cc
+set srcmainfile ${testfile}-main.cc
 set executable $testfile
-set objfile [standard_output_file ${testfile}.o]
-set objmainfile [standard_output_file ${testfile}-main.o]
-
+set objfile $objdir/$subdir/${testfile}.o
+set objmainfile $objdir/$subdir/${testfile}-main.o
+set binfile $objdir/$subdir/$executable
 if {[gdb_compile $srcdir/$subdir/$srcfile $objfile object {}] != ""
-    || [gdb_compile $srcdir/$subdir/$srcfile2 $objmainfile object {debug}] != ""
-    || [gdb_compile "$objfile $objmainfile" $binfile executable {c++}] != ""} {
+    || [gdb_compile $srcdir/$subdir/$srcmainfile $objmainfile object {debug}] != ""
+    || [gdb_compile "$objfile $objmainfile" $binfile executable {}] != ""} {
     untested ${testfile}.exp
     return -1
 }
@@ -33,6 +35,4 @@ clean_restart ${executable}
 
 gdb_test_no_output "set breakpoint pending off"
 
-gdb_test "break C::f()" {Breakpoint [0-9]+ at 0x[0-9a-f]+}
-
-gdb_test "break C::operator()()" {Breakpoint [0-9]+ at 0x[0-9a-f]+}
+gdb_test "break 'C::f()'" {Breakpoint [0-9]+ at 0x[0-9a-f]+}
